# aura-scanner-web

./: .gitignore  aura_scanner.js  package-lock.json  package.json  pyproject.toml  render.yaml
.github/workflows/: pages.yml
docs/: index.html
tests/: aura_scanner.test.js
